--- a/report.html
+++ b/report.html
@@ -81,7 +81,7 @@
 
     <div class="report-section">
       <h3 class="title">1. 样品名称</h3>
-      <div class="title text">建筑保温砂浆(FTC自调温相变蓄能保温砂浆)</div>
+      <div class="title text">聚合物水泥珍珠岩抗裂砂浆</div>
     </div>
 
     <div class="report-section">
@@ -91,7 +91,7 @@
 
     <div class="report-section">
       <h3 class="title">3. 报告编号</h3>
-      <div class="title text">Z240802007</div>
+      <div class="title text">Z250516003</div>
     </div>
 
     <div class="report-section">
@@ -111,7 +111,7 @@
 
     <div class="report-section">
       <h3 class="title">7. 签发日期</h3>
-      <div class="title text">2024-10-10</div>
+      <div class="title text">2025-7-18</div>
     </div>
 
     <div class="report-section">
@@ -121,10 +121,11 @@
 
     <div class="report-section">
       <h3 class="title">9. 检验结论</h3>
-      <div class="title text">经检验，所检建筑保温砂浆(FTC自调温相变蓄能保温砂浆)依据 GB/T 20473-2021所检项目符合标准要求。</div>
+      <div class="title text">经检验，所检建筑保温砂浆(聚合物水泥珍珠岩抗裂砂浆)依据 GB/T 20473-2021所检项目符合标准要求。</div>
     </div>
   </div>
 </body>
 
 </html>
+
 </html>
